# Vishwamitra

./: .env.example  .gitignore  .hf_frontmatter.md  Blog.md  Dockerfile  README.md  README_HACKATHON.md  app.py  check_hf_space.py  generate_dataset.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  training_log.csv  validate.py
agents/: __init__.py  admin_agent.py  adversarial_agent.py  base_agent.py  policymaker_agent.py  student_agent.py  teacher_agent.py
checkpoints/: dropout_commons_v1_20260331_185150_vecnorm.pkl  dropout_commons_v1_20260331_192110_vecnorm.pkl  job_23e23cb5-4421-41fa-bf13-35e8d188fd55_20260401_093439_vecnorm.pkl  job_277f5219-def3-4c87-8778-ab96cea71f9c_20260402_101824_vecnorm.pkl  job_82b297b5-493b-4db2-b0c2-93e9cd2c8b04_20260402_114412_vecnorm.pkl  job_be7f3646-5b39-4f5d-9eaf-b03e6caa6b4c_20260401_093721_vecnorm.pkl  job_f7b24fb9-2121-4a16-87d1-0cfc96afb29c_20260331_233319_vecnorm.pkl  meta_policy.pt
data/: train.jsonl  val.jsonl
env/: __init__.py  collapse_detector.py  config.py  dropout_env.py  openenv_compat.py  spaces.py  state.py
env/scenarios/: __init__.py  base_scenario.py  conflict_zone.py  funding_cut.py  indian_context.py  pandemic_recovery.py  teacher_shortage.py
evaluation/: eval_distilled.py
examples/: swarm_demo.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: push-to-hf.sh
server/: __init__.py  app.py  swarm_routes.py
swarms/: __init__.py
swarms/config/: roles.yaml
swarms/core/: __init__.py  llm_client.py  persona.py  swarm.py  swarm_agent.py  verdict.py
swarms/logs/: run_0526e0748f53.jsonl  run_0b676b5ebc05.jsonl  run_26f471de6c59.jsonl  run_3f9e0e60904f.jsonl  run_5a54e5418a9f.jsonl  run_64bbc38a99fe.jsonl  run_69e413a85a3e.jsonl  run_85d8035c058a.jsonl  run_8b35cc1e6c34.jsonl  (+3 more)
training/: __init__.py  _build_notebook.py  callbacks.py  config.py  curriculum.py  meta_rl.py  train.py  train_unsloth.ipynb
vishwamitra-1b-lora/: README.md  adapter_config.json  adapter_model.safetensors
(+24 files in other folders)
